# python-node

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  README.md  REFERENCE.md  build.rs  fix-python-soname.js  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: cargo.toml
.github/workflows/: CI.yml  build-and-test.yml  lint.yml  release.yml
fix-python-soname/: .gitignore  Cargo.toml
fix-python-soname/src/: main.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: package.json
scripts/: update-version.mjs
src/: README.md  lib.rs
src/asgi/: event_loop_handle.rs  http.rs  http_method.rs  http_version.rs  info.rs  lifespan.rs  mod.rs  python_future_poller.rs  receiver.rs  runtime_handle.rs  sender.rs  websocket.rs
test/: concurrency.test.mjs  handler.test.mjs  streaming.test.mjs  websocket-integration.test.mjs  websocket.test.mjs
test/fixtures/: README.md  echo_app.py  error_app.py  main.py  root_path_app.py  status_app.py  stream_app.py  stream_error_app.py  websocket_app.py
