[workspace]
members = [".", "fix-python-soname"]
resolver = "2"

[package]
name = "python-node"
version = "1.0.0"
description = "Run ASGI-compatible Python apps in Node.js"
authors = ["Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)"]
license = "Apache-2.0"
repository = "https://github.com/platformatic/http-rewriter"
keywords = ["http", "rewriting", "library"]
categories = ["network-programming", "web-development"]
edition = "2024"

[features]
default = []
napi-support = ["dep:napi", "dep:napi-derive", "dep:napi-build", "http-handler/napi-support", "http-rewriter/napi-support"]

[lib]
name = "python_node"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
http-handler = { git = "ssh://git@github.com/platformatic/http-handler" }
# http-handler = { path = "../http-handler" }
http-rewriter = { git = "ssh://git@github.com/platformatic/http-rewriter" }
# http-rewriter = { path = "../http-rewriter" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt", "async"], optional = true }
napi-derive = { version = "3", optional = true }
pyo3 = { version = "0.25.1", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
libc = "0.2"

[build-dependencies]
napi-build = { version = "2", optional = true }

[profile.release]
lto = true
strip = "symbols"
